@@ -1,5 +1,6 @@
 0.1.1: (UNRELEASED)
 - Added support for ELF symbol type, binding, and visibility
+- Added support for symbols with absolute addresses using .set
 
 0.1.0:
 - gtirb-rewriting now requires gtirb 1.10.6.
